@@ -1,0 +1,7 @@
+package package1::package2
+
+-- The operation < is also allowed as a non-infix operation.
+context Type1
+inv: 1.<(2)
+
+endpackage
