@@ -1,0 +1,6 @@
+package package1::package2
+
+context Type1
+inv: 1.3.round() = 1
+
+endpackage
